crates/rome_formatter/tests/specs/prettier/range/module-export1.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: module-export1.js

---
# Input
```js
import  def , {named}  from    'x'

export * <<<PRETTIER_RANGE_START>>> from   'd'<<<PRETTIER_RANGE_END>>>

export    const  x
  =  42

export   default    42


```

# Output
```js
import def, { named } from 'x';

export *
<<<PRETTIER_RANGE_START>>> from   'd'<<<PRETTIER_RANGE_END>>>

export const x = 42;

export default 42;

```

# Errors
```
error[SyntaxError]: expected `from` but instead found `<<`
  ┌─ module-export1.js:3:10
  │
3 │ export * <<<PRETTIER_RANGE_START>>> from   'd'<<<PRETTIER_RANGE_END>>>
  │          ^^ unexpected


```


